--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vuquangthinh/nestjs-authentication-basic",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -26,7 +26,7 @@
     "@nestjs/common": "^7.1.3",
     "@nestjs/core": "^7.1.3",
     "typeorm": "^0.2.26",
-    "@agiletech.vn/nestjs-authentication": "*",
+    "@vuquangthinh/nestjs-authentication": "*",
     "class-validator": "^0.10.0"
   },
   "description": "authentication basic: login by username / password & generate token",
