--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "build": "npx tsc -p tsconfig.json",
     "watch": "npx tsc -W -p tsconfig.json"
@@ -16,7 +18,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "@vuquangthinh/nestjs-authentication": "1.0.0"
   },
   "devDependencies": {
     "@types/node": "^10.7.1",
@@ -26,7 +29,6 @@
     "@nestjs/common": "^7.1.3",
     "@nestjs/core": "^7.1.3",
     "typeorm": "^0.2.26",
-    "@vuquangthinh/nestjs-authentication": "*",
     "class-validator": "^0.10.0"
   },
   "description": "authentication basic: login by username / password & generate token",
