--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@vuquangthinh/nestjs-authentication-basic",
+  "name": "@agiletech.vn/nestjs-authentication-basic",
   "version": "1.0.2",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "access": "public"
   },
   "scripts": {
     "build": "npx tsc -p tsconfig.json",
@@ -14,12 +14,13 @@
   "dependencies": {
     "@nestjs/passport": "^7.1.0",
     "@types/uuid": "^3.4.4",
+    "@agiletech.vn/nestjs-authentication": "^1.0.0",
     "bcrypt": "^5.0.0",
+    "class-validator": "^0.13.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
-    "uuid": "^3.3.2",
-    "@vuquangthinh/nestjs-authentication": "^1.0.0"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^10.7.1",
@@ -28,8 +29,8 @@
   "peerDependencies": {
     "@nestjs/common": "^7.1.3",
     "@nestjs/core": "^7.1.3",
-    "typeorm": "^0.2.26",
-    "class-validator": "^0.10.0"
+    "class-validator": "^0.10.0",
+    "typeorm": "^0.2.26"
   },
   "description": "authentication basic: login by username / password & generate token",
   "author": ""
